--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <main>
         <H1>Penny Flip Game</H1>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+            <div>
+                <div>
+                    <img id="penny-image" src="assets/images/penny-heads.jpg" alt="penny image">
+                </div>
+                <div class="controls">
+                    <button id="flip">Flip</button>
+                    <button id="clear">Clear</button>
+                </div>
+                <div class="message-container">
+                    <h3 id="message">You know you want to flip the coin again!!!</h3>
+                </div>
+            </div>
             <hr>
             <div>
                 <h2>Scoreboard</h2>
